[workspace]
resolver = "2"
members = [
  "src/core",
  "src/network",
  "src/node",
  "src/cli",
  "src/bridge",
  "src/tests"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Volt Team"]
description = "A chainless, feeless token transfer network"
repository = "https://github.com/volt/volt"
license = "MIT"

[workspace.dependencies]
# Core dependencies
sha2 = "0.10.6"
ed25519-dalek = "1.0.1"
sparse-merkle-tree = "0.6.1"
byteorder = "1.4.3"
thiserror = "1.0.40"
anyhow = "1.0.71"
log = "0.4.17"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
bincode = "1.3.3"

# Network dependencies
libp2p = { version = "0.52.0", features = ["kad", "gossipsub", "tcp", "noise", "yamux", "identify", "ping"] }
rocksdb = "0.20.1"
tokio = { version = "1.28.2", features = ["full"] }
futures = "0.3.28"
async-trait = "0.1.68"

# CLI dependencies
structopt = "0.3.26"
bip32 = "0.5.0"
rand = "0.8.5"
colored = "2.0.0"

# Bridge dependencies
ethers = { version = "2.0.4", features = ["abigen", "legacy"] }
hex = "0.4.3"

# Testing dependencies
tempfile = "3.5.0"
serial_test = "2.0.0"
