[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "CLI wallet for the chainless token transfer network"
license.workspace = true

[dependencies]
core = { path = "../core" }
network = { path = "../network" }
structopt.workspace = true
tokio.workspace = true
ed25519-dalek.workspace = true
bip32.workspace = true
rand.workspace = true
colored.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde.workspace = true
serde_json = "1.0.96"
dirs = "5.0.1"
sha2.workspace = true
hex.workspace = true
bincode.workspace = true
reqwest = { version = "0.11.18", features = ["json"] }

[dev-dependencies]
tempfile.workspace = true
