[package]
name = "core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core primitives for the chainless token transfer network"
license.workspace = true

[dependencies]
sha2.workspace = true
ed25519-dalek.workspace = true
sparse-merkle-tree.workspace = true
byteorder.workspace = true
thiserror.workspace = true
log.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
bincode.workspace = true
rocksdb = "0.21"

[dev-dependencies]
rand = "0.8.5"
