[package]
name = "node"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Node daemon for the chainless token transfer network"
license.workspace = true

[dependencies]
core = { path = "../core" }
network = { path = "../network" }
tokio.workspace = true
structopt.workspace = true
dotenv = "0.15.0"
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde.workspace = true
serde_json = "1.0.96"
warp = "0.3.5"
prometheus = "0.13.3"
lazy_static = "1.4.0"
futures.workspace = true
libp2p.workspace = true
dirs = "5.0.1"
hex.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
bincode.workspace = true
rand = "0.8.5"
tempfile = "3.8.0"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tempfile.workspace = true
